# webcrawler

./: README.md  pyproject.toml
tests/: test_utils.py  utils_test.py
webcrawler/: __init__.py  crawler.py  example.py  playwright_example.py  utils.py
